# raytracer

./: CMakeLists.txt
.cache/clangd/index/: main.c.F71307D2084AF3F6.idx
src/: main.c
